--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "concurrently": "^6.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "mongoose": "^5.12.10",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react-icons": "^4.2.0"
   }
 }
