--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.12.10",
     "nodemon": "^2.0.7",
     "react-icons": "^4.2.0"
