--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.10",
+    "mongoose-delete": "^0.5.3",
     "nodemon": "^2.0.7",
     "react-icons": "^4.2.0"
   }
