--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.27.2",
     "concurrently": "^6.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
